--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "keywords": [
     "SplitWise"
   ],
-  "author": "Sunny George",
+  "author": "Devansh Shankhdhar",
   "license": "ISC",
   "dependencies": {
     "@mui/x-data-grid": "^5.12.3",
